--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -51,7 +51,7 @@
   .arrow {
     color: #d8e9a8;
     position: absolute;
-    bottom: 20px;
+    bottom: 3%;
     scale: 1.4;
     animation: pulse 1.8s infinite linear;
   }
