--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -94,7 +94,7 @@
     height: 7%;
     color: #d8e9a8;
     transition: 0.3s;
-
+    border-radius: 5px;
     &:hover {
       color: #191a19;
       background-color: #d8e9a8;
