--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -183,6 +183,7 @@
         span {
           margin-left: 0;
           margin-top: 10px;
+          margin-bottom: 10px;
         }
       }
     }
