--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,6 +6,7 @@
   color: #d8e9a8;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   font-family: "Lato", sans-serif;
   display: flex;
   flex-direction: column;
