--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -45,6 +45,13 @@
           font-size: 2em;
           margin: 0 30px;
         }
+        .phone {
+          animation: phone linear 0.6s infinite;
+        }
+
+        .map {
+          animation: map linear 1.5s infinite;
+        }
       }
     }
     .contact__leftSocials {
@@ -56,19 +63,6 @@
       width: 30%;
       min-width: 300px;
       transform: translateX(-50%);
-
-      .social {
-        color: #d8e9a8;
-        border-radius: 50%;
-        font-size: clamp(3em, 2vw, 4em);
-
-        &:hover {
-          color: #191a19;
-          border-radius: 50%;
-          box-shadow: 0 0 10px #d8e9a8, 0 0 40px #d8e9a8, 0 0 80px #d8e9a8,
-            0 0 10px #d8e9a8, 0 0 40px #d8e9a8, 0 0 80px #d8e9a8 inset;
-        }
-      }
     }
   }
 
@@ -85,6 +79,7 @@
       font-size: clamp(1em, 1.3vw, 2em);
       position: absolute;
       top: 8%;
+      margin-right: 5%;
     }
 
     form {
@@ -145,7 +140,7 @@
         &:hover {
           color: #191a19;
           background-color: #d8e9a8;
-          box-shadow: 0 0 10px #d8e9a8, 0 0 40px #d8e9a8, 0 0 80px #d8e9a8;
+          box-shadow: 0 0 10px #d8e9a8, 0 0 30px #d8e9a8, 0 0 50px #d8e9a8;
         }
       }
 
@@ -190,5 +185,29 @@
         }
       }
     }
+  }
+}
+
+@keyframes phone {
+  0% {
+    transform: rotate(-6deg);
+  }
+  50% {
+    transform: rotate(6deg);
+  }
+  100% {
+    transform: rotate(-6deg);
+  }
+}
+
+@keyframes map {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
