--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -53,7 +53,7 @@
     position: absolute;
     bottom: 3%;
     scale: 1.4;
-    animation: pulse 1.8s infinite linear;
+    animation: pulse 1s infinite linear;
   }
 }
 
@@ -72,12 +72,15 @@
 @keyframes pulse {
   0% {
     opacity: 1;
+    transform: translateY(-5px);
   }
   50% {
     opacity: 0.2;
+    transform: translateY(0px);
   }
   100% {
     opacity: 1;
+    transform: translateY(-5px);
   }
 }
 
