--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   background-color: #191a19;
+  position: relative;
 
   .info__imgContainer {
     width: 90%;
