--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -9,6 +9,9 @@
 
   .resumeText {
     margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
     font-size: clamp(1em, 1vw, 1.3em);
   }
   .resumeImg {
