--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -13,11 +13,11 @@
   }
 
   .projects__list {
-    width: 80%;
+    width: 95%;
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
   }
 }
