--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -9,6 +9,10 @@
   z-index: 100;
   transition: 0.1s;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   .menuList {
     display: none;
     transition-delay: 0.3s;
@@ -26,6 +30,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &:hover {
+    cursor: default;
+  }
 
   .sidebarIconDiv {
     .sidebarIcon {
@@ -71,6 +79,7 @@
   right: 18px;
 
   &:hover {
+    cursor: pointer;
     transform: scale(1.2);
     transition: 0.3s;
   }
