--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -20,6 +20,29 @@
     justify-content: center;
     align-items: center;
   }
+
+  .projectsBtn {
+    color: rgb(216, 233, 168);
+    text-decoration: none;
+    font-weight: 500;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    border: 1px solid rgb(216, 233, 168);
+    box-shadow: rgba(216, 233, 168, 0.25) 0px 30px 60px -12px inset,
+      rgba(216, 233, 168, 0.3) 0px 18px 36px -18px inset;
+    border-radius: 5px;
+    transition: 0.3s ease;
+
+    &:hover {
+      transition: 0.3s ease;
+      transform: scale(1.04);
+      box-shadow: 0 0 10px #d8e9a8, 0 0 40px #d8e9a8, 0 0 80px #d8e9a8;
+    }
+  }
 }
 
 @media screen and (max-width: 450px) {
